# py-review-rules

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
examples/: pre-commit-config.yaml
pcr/: _noqa.py  _sloc.py  arg_count.py  ast_utils.py  bad_notimplemented.py  banned_output_call.py  bool_arg.py  check.py  cli.py  click_aliases.py  codes.py  config.py  construct_violation.py  count_violation.py  csv_options.py  default_options.py  defaults_by_arg.py  documented_members.py  elif_count.py  function_depth.py  hinted_args.py  if_depth.py  is_elif_child.py  module_noqa.py  mutable_value.py  parents.py  parse_banned_import.py  rule_selection.py  test_paths.py  unannotated_self_assignment.py  violation.py
pcr/hooks/: _sloc.py  ban_constructs.py  ban_dependency.py  max_code_lines.py  max_nesting_depth.py
pcr/rules/: banned_imports.py  bool_args.py  class_assignment_hints.py  class_docs.py  class_member_counts.py  class_member_hints.py  class_sloc.py  classes.py  control_flow.py  counts.py  elifs.py  exception_style.py  file_sloc.py  function_docs.py  function_nesting.py  function_sloc.py  function_type_hints.py  functions.py  future_imports.py  imports.py  kw_only_defaults.py  local_helpers.py  max_args.py  method_counts.py  mutable_globals.py  nested_ifs.py  notimplemented_placeholders.py  output_constructs.py  placeholder_comments.py  placeholder_passes.py  placeholders.py  public_counts.py  sloc.py  style.py  top_level_imports.py  typing_aliases.py
prr/: _noqa.py  annotated_members.py  arg_count.py  bad_notimplemented.py  banned_typing_alias.py  check.py  class_member.py  cli.py  click_aliases.py  codes.py  comment_by_line.py  config.py  construct_violation.py  count_violation.py  default_options.py  defaults_by_arg.py  dotted_name.py  function_depth.py  hinted_args.py  if_depth.py  imported_names.py  module_noqa.py  mutable_value.py  optional_int.py  rule_selection.py  violation.py
prr/rules/: __init__.py  banned_imports.py  bool_args.py  class_assignment_hints.py  class_docs.py  class_member_counts.py  class_member_hints.py  class_sloc.py  classes.py  control_flow.py  counts.py  elifs.py  exception_style.py  file_sloc.py  function_docs.py  function_nesting.py  function_sloc.py  function_type_hints.py  functions.py  future_imports.py  imports.py  kw_only_defaults.py  local_helpers.py  max_args.py  method_counts.py  mutable_globals.py  nested_ifs.py  notimplemented_placeholders.py  output_constructs.py  placeholder_comments.py  placeholder_passes.py  placeholders.py  public_counts.py  sloc.py  style.py  top_level_imports.py  typing_aliases.py
tests/: test_check.py
tests/hooks/: test_ban_constructs.py  test_ban_dependency.py  test_max_code_lines.py  test_max_nesting_depth.py  (+2 more)
