[project]
name = "pcr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "david.volgyes@ieee.org" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.3",
]

[project.scripts]
max-code-lines = "pcr.hooks.max_code_lines:main"
ban-constructs = "pcr.hooks.ban_constructs:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "pcr"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
