[project]
name = "py-review-rules"
version = "0.1.0"
description = "Pre-commit hooks for enforcing Python code review constraints"
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "david.volgyes@ieee.org" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "click>=8.4.1,<9",
]

[project.scripts]
py-review-rules = "pcr.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "pcr"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.14.1,<8",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-xdist>=3.8.0,<4",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 6
max-branches = 10
max-locals = 12
max-statements = 40
max-positional-args = 3

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ARG", "ANN"]
